NULL =

org.freedesktop.portal.Flatpak.xml :
	cp $(FLATPAK_INTERFACES_DIR)/org.freedesktop.portal.Flatpak.xml .

portal_files = 								\
	org.freedesktop.portal.Flatpak.xml		 		\
	$(top_srcdir)/data/org.freedesktop.portal.Account.xml 		\
	$(top_srcdir)/data/org.freedesktop.portal.Request.xml 		\
	$(top_srcdir)/data/org.freedesktop.portal.Session.xml 		\
	$(top_srcdir)/data/org.freedesktop.portal.FileChooser.xml 	\
	$(top_srcdir)/data/org.freedesktop.portal.Trash.xml 		\
	$(top_srcdir)/data/org.freedesktop.portal.OpenURI.xml 		\
	$(top_srcdir)/data/org.freedesktop.portal.Print.xml 		\
	$(top_srcdir)/data/org.freedesktop.portal.Email.xml 		\
	$(top_srcdir)/data/org.freedesktop.portal.Screenshot.xml 	\
	$(top_srcdir)/data/org.freedesktop.portal.ScreenCast.xml 	\
	$(top_srcdir)/data/org.freedesktop.portal.RemoteDesktop.xml 	\
	$(top_srcdir)/data/org.freedesktop.portal.NetworkMonitor.xml 	\
	$(top_srcdir)/data/org.freedesktop.portal.ProxyResolver.xml 	\
	$(top_srcdir)/data/org.freedesktop.portal.Notification.xml 	\
	$(top_srcdir)/data/org.freedesktop.portal.Inhibit.xml	 	\
	$(top_srcdir)/data/org.freedesktop.portal.Device.xml	 	\
	$(top_srcdir)/data/org.freedesktop.portal.Location.xml		\
	$(top_srcdir)/data/org.freedesktop.portal.Settings.xml		\
	$(top_srcdir)/data/org.freedesktop.portal.Secret.xml		\
	$(top_srcdir)/data/org.freedesktop.portal.Background.xml		\
	$(top_srcdir)/data/org.freedesktop.portal.GameMode.xml		\
	$(top_srcdir)/data/org.freedesktop.portal.Camera.xml		\
	$(top_srcdir)/data/org.freedesktop.portal.Wallpaper.xml		\
	$(top_srcdir)/data/org.freedesktop.portal.MemoryMonitor.xml 	\
	$(top_srcdir)/data/org.freedesktop.portal.FileTransfer.xml 	\
	$(top_srcdir)/data/org.freedesktop.portal.PowerProfileMonitor.xml 	\
	$(top_srcdir)/data/org.freedesktop.portal.Realtime.xml 	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.Account.xml 	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.Request.xml 	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.Session.xml 	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.FileChooser.xml 	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.AppChooser.xml 	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.Print.xml 	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.Email.xml 	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.Screenshot.xml 	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.ScreenCast.xml 	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.RemoteDesktop.xml\
	$(top_srcdir)/data/org.freedesktop.impl.portal.Notification.xml	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.Inhibit.xml	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.Access.xml	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.Settings.xml	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.Secret.xml	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.Lockdown.xml	\
	$(top_srcdir)/data/org.freedesktop.portal.Documents.xml		\
	$(top_srcdir)/data/org.freedesktop.impl.portal.PermissionStore.xml	\
	$(top_srcdir)/data/org.freedesktop.impl.portal.Background.xml		\
	$(top_srcdir)/data/org.freedesktop.impl.portal.Wallpaper.xml		\
	$(NULL)

xml_files = 								\
	portal-org.freedesktop.portal.Account.xml 			\
	portal-org.freedesktop.portal.Flatpak.xml 			\
	portal-org.freedesktop.portal.Flatpak.UpdateMonitor.xml 			\
	portal-org.freedesktop.portal.Request.xml 			\
	portal-org.freedesktop.portal.Session.xml 			\
	portal-org.freedesktop.portal.FileChooser.xml 			\
	portal-org.freedesktop.portal.Trash.xml 			\
	portal-org.freedesktop.portal.OpenURI.xml 			\
	portal-org.freedesktop.portal.Print.xml 			\
	portal-org.freedesktop.portal.Email.xml 			\
	portal-org.freedesktop.portal.Screenshot.xml 			\
	portal-org.freedesktop.portal.ScreenCast.xml 			\
	portal-org.freedesktop.portal.RemoteDesktop.xml 		\
	portal-org.freedesktop.portal.NetworkMonitor.xml		\
	portal-org.freedesktop.portal.ProxyResolver.xml			\
	portal-org.freedesktop.portal.Notification.xml			\
	portal-org.freedesktop.portal.Inhibit.xml			\
	portal-org.freedesktop.portal.Documents.xml			\
	portal-org.freedesktop.portal.Device.xml			\
	portal-org.freedesktop.portal.Location.xml			\
	portal-org.freedesktop.portal.Settings.xml			\
	portal-org.freedesktop.portal.Secret.xml			\
	portal-org.freedesktop.portal.Wallpaper.xml			\
	portal-org.freedesktop.portal.Background.xml			\
	portal-org.freedesktop.portal.GameMode.xml			\
	portal-org.freedesktop.portal.Camera.xml			\
	portal-org.freedesktop.portal.MemoryMonitor.xml		\
	portal-org.freedesktop.portal.PowerProfileMonitor.xml		\
	portal-org.freedesktop.portal.Realtime.xml		\
	portal-org.freedesktop.impl.portal.Background.xml 			\
	portal-org.freedesktop.portal.FileTransfer.xml			\
	portal-org.freedesktop.impl.portal.Request.xml 			\
	portal-org.freedesktop.impl.portal.Session.xml 			\
	portal-org.freedesktop.impl.portal.FileChooser.xml		\
	portal-org.freedesktop.impl.portal.AppChooser.xml 		\
	portal-org.freedesktop.impl.portal.Print.xml 			\
	portal-org.freedesktop.impl.portal.Email.xml 			\
	portal-org.freedesktop.impl.portal.Screenshot.xml 		\
	portal-org.freedesktop.impl.portal.ScreenCast.xml 		\
	portal-org.freedesktop.impl.portal.RemoteDesktop.xml 		\
	portal-org.freedesktop.impl.portal.Notification.xml 		\
	portal-org.freedesktop.impl.portal.Inhibit.xml	 		\
	portal-org.freedesktop.impl.portal.Access.xml	 		\
	portal-org.freedesktop.impl.portal.Settings.xml	 		\
	portal-org.freedesktop.impl.portal.Secret.xml	 		\
	portal-org.freedesktop.impl.portal.Wallpaper.xml			\
	portal-org.freedesktop.impl.portal.Lockdown.xml	 		\
	portal-org.freedesktop.impl.portal.PermissionStore.xml		\
	$(NULL)

EXTRA_DIST = \
	org.freedesktop.portal.Flatpak.xml \
	docbook.css		\
	portal-docs.xml.in	\
	xmlto-config.xsl	\
	$(NULL)

$(xml_files) : $(portal_files)
	$(AM_V_GEN) $(GDBUS_CODEGEN) --generate-docbook portal $^

CLEANFILES =			\
	$(xml_files) 		\
	portal-docs.html	\
	$(NULL)

DISTCLEANFILES =	\
	portal-docs.xml	\
	$(NULL)

if DOCBOOK_DOCS_ENABLED

doc_DATA = 			\
	portal-docs.html	\
	docbook.css		\
	$(NULL)

portal-docs.html: portal-docs.xml $(xml_files) xmlto-config.xsl
	$(AM_V_GEN) $(XMLTO) $(XMLTO_FLAGS) xhtml-nochunks -m $(srcdir)/xmlto-config.xsl $<

endif # DOCBOOK_DOCS_ENABLED
